# WinLite

./: CMakeLists.txt  README.md
cmake/: WinLiteConfig.cmake.in
include/WinLite/: Windows.h
include/WinLite/internal/: minWindows.h  postWinapi.h  preWinapi.h
